bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `bitfield::BoolType<false>: DiscriminantInRange` is not satisfied
  --> tests/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `bitfield::BoolType<false>`
   |
   = help: the trait `DiscriminantInRange` is implemented for `bitfield::BoolType<true>`
note: required by a bound in `bitfield::CheckIsDiscriminantInRange`
  --> src/lib.rs
   |
   | pub struct CheckIsDiscriminantInRange<T: DiscriminantInRange> {
   |                                          ^^^^^^^^^^^^^^^^^^^ required by this bound in `bitfield::CheckIsDiscriminantInRange`
